--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^11.3.30",
     "next": "^14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
