--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
+    "lucide-react": "^0.554.0",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
     "react": "^18",
