--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
+    "cloudinary": "^2.8.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.554.0",
     "next": "^14.2.3",
